# cloudless

./: .gitignore  AUTHORS  CNAME  COPYING  Makefile.am  README  acinclude.m4  bootstrap  configure.ac  doxygen.am  doxygen.cfg  index.html  libcloudless.pc.in  params.json  version.sh  versionfilter.sh
api_doc/latest/: address_8cpp.html  address_8cpp__incl.map  address_8cpp__incl.md5  address_8cpp_source.html  address_8hpp.html  address_8hpp.js  address_8hpp__dep__incl.map  address_8hpp__dep__incl.md5  address_8hpp__incl.md5  address_8hpp_source.html  annotated.html  block_8hpp.html  block_8hpp__incl.map  block_8hpp_source.html  classcloudless_1_1crypto_1_1block-members.html  classcloudless_1_1crypto_1_1block.html  classcloudless_1_1crypto_1_1block__auth-members.html  classcloudless_1_1crypto_1_1block__auth.html  classcloudless_1_1crypto_1_1exchanger-members.html  classcloudless_1_1crypto_1_1exchanger.html  classcloudless_1_1crypto_1_1exchanger.js  classcloudless_1_1crypto_1_1hash-members.html  classcloudless_1_1crypto_1_1hash.html  classcloudless_1_1crypto_1_1hash.js  classcloudless_1_1crypto_1_1random-members.html  classcloudless_1_1crypto_1_1random.html  classcloudless_1_1crypto_1_1random.js  classcloudless_1_1crypto_1_1random__coll__graph.md5  classcloudless_1_1crypto_1_1stream-members.html  classcloudless_1_1crypto_1_1stream.html  classcloudless_1_1crypto_1_1stream.js  classcloudless_1_1detail_1_1nonconstructive-members.html  classcloudless_1_1detail_1_1nonconstructive.html  classcloudless_1_1detail_1_1noncopyable-members.html  classcloudless_1_1detail_1_1noncopyable.html  classcloudless_1_1detail_1_1noncopyable__inherit__graph.md5  classcloudless_1_1detail_1_1singleton-members.html  classcloudless_1_1detail_1_1singleton.html  classcloudless_1_1detail_1_1singleton.js  classcloudless_1_1detail_1_1thread-members.html  (+584 more)
api_doc/latest/search/: all_61.js  all_62.js  (+52 more)
cloudless/: Makefile.am  address.cpp  address.hpp  common.hpp  context.cpp  context.hpp  dealer.cpp  dealer.hpp  device.cpp  device.hpp  edges.cpp  edges.hpp  element.cpp  element.hpp  exceptions.cpp  exceptions.hpp  message.cpp  message.hpp  messages.cpp  messages.hpp  misc.cpp  misc.hpp  pair.cpp  pair.hpp  platform.hpp.in  poller.cpp  poller.hpp  pollitem.cpp  pollitem.hpp  pub.cpp  pub.hpp  pull.cpp  pull.hpp  push.cpp  push.hpp  rep.cpp  rep.hpp  req.cpp  req.hpp  router.cpp  (+16 more)
cloudless/crypto/: block.hpp  dh_modp.cpp  dh_modp.hpp  exchanger.hpp  hash.hpp  random.hpp  stream.hpp
cloudless/crypto/cryptopp/: block.hpp  dh_modp.cpp  dh_modp.hpp  eccrypto.h  fhmqv.h  hash.hpp  random.hpp  stream.hpp
cloudless/detail/: enable_shared_from_this.hpp  exception.hpp  export.hpp  ipod.hpp  nonconstructive.hpp  noncopyable.hpp  shared_array.hpp  shared_ptr.hpp  singleton.hpp  thread.cpp  thread.hpp
cloudless/detail/zeromq/: zcontext.cpp  zcontext.hpp  zeromq.hpp  zmessage.cpp  zmessage.hpp  zsocket.cpp  zsocket.hpp
cloudless/details/: enable_shared_from_this.hpp  exception.hpp  export.hpp  ipod.hpp  nonconstructive.hpp  noncopyable.hpp  shared_array.hpp  shared_ptr.hpp  singleton.hpp  thread.cpp  thread.hpp
cloudless/details/zeromq/: zcontext.cpp  zcontext.hpp  zeromq.hpp  zmessage.cpp  zmessage.hpp  zsocket.cpp  zsocket.hpp  zsocket_base.cpp  zsocket_base.hpp
docs/: address_8cpp.html  address_8cpp_source.html  address_8hpp.html  address_8hpp__incl.map  address_8hpp_source.html  annotated.html  annotated.js  block_8hpp.html  block_8hpp__incl.md5  block_8hpp_source.html  classcloudless_1_1crypto_1_1block-members.html  classcloudless_1_1crypto_1_1block.html  classcloudless_1_1crypto_1_1block.js  classcloudless_1_1crypto_1_1block__auth-members.html  classcloudless_1_1crypto_1_1block__auth.html  classcloudless_1_1crypto_1_1block__auth.js  classcloudless_1_1crypto_1_1exchanger-members.html  classcloudless_1_1crypto_1_1exchanger.html  classcloudless_1_1crypto_1_1hash-members.html  classcloudless_1_1crypto_1_1hash.html  classcloudless_1_1crypto_1_1random-members.html  classcloudless_1_1crypto_1_1random.html  classcloudless_1_1crypto_1_1random__coll__graph.map  classcloudless_1_1crypto_1_1stream-members.html  classcloudless_1_1crypto_1_1stream.html  classcloudless_1_1detail_1_1nonconstructive-members.html  classcloudless_1_1detail_1_1nonconstructive.html  classcloudless_1_1detail_1_1nonconstructive__inherit__graph.map  classcloudless_1_1detail_1_1nonconstructive__inherit__graph.md5  classcloudless_1_1detail_1_1noncopyable-members.html  classcloudless_1_1detail_1_1noncopyable.html  classcloudless_1_1detail_1_1noncopyable.js  classcloudless_1_1detail_1_1noncopyable__inherit__graph.map  classcloudless_1_1detail_1_1singleton-members.html  classcloudless_1_1detail_1_1singleton.html  classcloudless_1_1detail_1_1singleton.js  classcloudless_1_1detail_1_1thread-members.html  classcloudless_1_1detail_1_1thread.html  classcloudless_1_1detail_1_1thread.js  classcloudless_1_1detail_1_1thread__coll__graph.md5  (+581 more)
docs/search/: all_5f.js  all_63.js  all_64.js  all_66.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_76.js  all_78.js  all_7a.js  all_7e.js  classes_62.js  classes_63.js  classes_65.js  classes_68.js  classes_69.js  classes_6e.js  classes_70.js  classes_72.js  classes_78.js  classes_7a.js  files_61.js  files_62.js  files_63.js  files_64.js  files_6e.js  files_70.js  files_72.js  files_74.js  files_78.js  files_7a.js  functions_63.js  functions_64.js  functions_66.js  (+13 more)
examples/: Makefile.am  example1.cpp  example2.cpp
include/: cloudless.h
m4/: compiler.m4  coverage.m4  crypto.m4  debug.m4  doc.m4  doxygen.m4  libcryptopp.m4  libtool-link.m4  libtool-run.m4  libzmq.m4  pkgconfig.m4  static.m4
tests/: Makefile.am  catch.hpp  test_comm.cpp  test_context.cpp  test_crypto_block.cpp  test_crypto_exchanger.cpp  test_crypto_hash.cpp  test_crypto_stream.cpp  test_dealer_router.cpp  test_device.cpp  test_edges.cpp  test_messages.cpp  test_pair.cpp  test_pub_sub.cpp  test_push_pull.cpp  test_req_rep.cpp  test_thread.cpp  test_utils.cpp  test_xpub_xsub.cpp  test_zmessage.cpp
